[package]
name = "traduora"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.10.2"
http = "0.2.5"
log = "0.4.14"
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
#percent-encoding = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
simple_logger = "1.13.0"
tokio = { version = "1.12.0", features = ["macros"] }

