[package]
name = "traduora"
version = "0.4.0"
edition = "2021"
rust-version = "1.56"
description = "REST API bindings for Traduora, an open-source translation management platform"
repository = "https://www.github.com/ede1998/traduora"
homepage = "https://www.github.com/ede1998/traduora"
keywords = ["REST", "API", "bindings", "traduora", "localization"]
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
http = "0.2.6"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }

# not yet used
# derive_builder = "0.10.2"

[dev-dependencies]
env_logger = "0.11.0"
tokio = { version = "1.17.0", features = ["macros"] }

[features]

